Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)


Changes for 0.x [200x-xx-xx]
============================

 o Bugfix: C++ client library, SocketDriver plugin
   Fixed that all properties are passed to the C SOCKET library instead
   of only the command line arguments
 
 o Bugfix: C SOCKET client library, fixed uninitialized memory read in memmove call
 
 o Added Thread Name to Logs 

 o Added a demo applet with XML script access to xmlBlaster.
   Location: xmlBlaster/demo/http/applet/XmlScript.java
   Compile:  build deploy_war   (and start tomcat + xmlBlaster server)
   Load:     http://localhost:8080/xmlBlaster/XmlScript.html (in mozilla, konqueor, appletviewer, explorer)

 o Bugfix for JXPath generation of ClientProperty in QoS (impact on tiny applet example only)

 o Updated utils.jar to CVS version from  2004-03-19, contains Property bug fix for ArrayOutOfBoundsException

 o JDBC configuration: Added column name prefix, used for MS-SQLServer to
   prefix reserved DB names 'byteSize' and 'dataId', see
      colNamePrefix=XB_
   in xmlBlaster.properties.template (the prefix is internally converted to uppercase)

 o modified http.applet protocol to allow invocations from standalone apps and from j2me

 o Renamed admin access to subjectInfo getCbQueueNumMsgs to getSubjectQueueNumMsgs

 o Added ActiveX (Windows) control to support access from C# and VisualBasic.net
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/client.activex.html

 o Fixed to rethrow XmlBLasterException from inside SAX parsing

 o Fixed build.xml to not need -DJVM.target=1.4 for JDK 1.5

Changes for 0.9 [2004-02-23]
============================

 o Ported java code to JDK 1.5
   - As 'enum' is now (Jdk1.5) a reserved keyword we renamed our package 'enum' to 'def'
     by replacing the token '.enum.' to '.def.' in the complete source tree.
   - Compiling: build -DJVM.target=1.4 delete all

 o SOCKET protocol on Java client side: